--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "keywords": [
     "music informatics",
-    "music"
+    "music",
+    "midi"
   ],
   "author": "Arman Bahraini",
   "license": "MIT",
